Z-index fix for magnific popup browse-arrows.

--- a/municipalityinitiative-web/src/main/webapp/css/less-imports/attachments.less
+++ b/municipalityinitiative-web/src/main/webapp/css/less-imports/attachments.less
@@ -59,3 +59,6 @@
 	width: 70px;
 	text-align:right;
 }
+.mfp-arrow {
+	z-index: 1046;
+}
